# dirigera

./: .env-template  .gitignore  .pylintrc  LICENSE  README.md  auth.py  auth.sh  config.py  dev-requirements.txt  example.py  mypy.ini  pyproject.toml  requirements.txt  run-build.sh  run-example.sh  run-mypy.sh  run-pylint.sh  run-python-versions-test.sh  run-test.sh  setup.sh
.github/workflows/: publish-to-pypi.yml  run-tests-and-linter.yml  tests.yml
devices/: light.py
hub/: dirigera_hub.py
src/dirigera/: __init__.py
src/dirigera/devices/: air_purifier.py  base_ikea_model.py  blinds.py  controller.py  device.py  environment_sensor.py  light.py  light_sensor.py  motion_sensor.py  occupancy_sensor.py  open_close_sensor.py  outlet.py  scene.py  water_sensor.py
src/dirigera/hub/: abstract_smart_home_hub.py  auth.py  hub.py  room.py  utils.py
tests/: test_air_purifier.py  test_blinds.py  test_controller.py  test_environment_sensor.py  test_light.py  test_light_sensor.py  test_motion_sensor.py  test_occupancy_sensor.py  test_open_close_sensor.py  test_outlet.py  test_scenes.py  test_utils.py  test_water_sensor.py
