[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigera"
version = "1.0.4"
description = "An unofficial Python client for controlling the IKEA Dirigera Smart Home Hub"
readme = "README.md"
authors = [{ name = "Leggin", email = "legginsun@gmail.com" }]
license = { file = "LICENSE" }
keywords = [
    "python",
    "iot",
    "smarthome",
    "hub",
    "lighting",
    "ikea",
    "tradfri",
    "dirigera",
]
dependencies = [
    "requests >= 2.22.0",
    "websocket-client >= 1.0.0",
    "pydantic >= 1.10.0",
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
dev = ["black", "pytest"]

[project.scripts]
generate-token = "dirigera.hub.auth:main"

[project.urls]
Homepage = "https://github.com/Leggin/dirigera"
